log
Thu Apr 16 08:08:00 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
ae2a3df
Thu Apr 16 08:09:24 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
b3e37e4
Thu Apr 16 08:11:58 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:25: error: invalid initializer
   48 |     HashMap nuevoMapa = malloc(sizeof(HashMap));
      |                         ^~~~~~
hashmap.c:50:12: error: ‘mapaNuevo’ undeclared (first use in this function)
   50 |     return mapaNuevo;
      |            ^~~~~~~~~
hashmap.c:50:12: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:48:13: error: unused variable ‘nuevoMapa’ [-Werror=unused-variable]
   48 |     HashMap nuevoMapa = malloc(sizeof(HashMap));
      |             ^~~~~~~~~
hashmap.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
ed1a564
Thu Apr 16 08:12:36 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:50:12: error: ‘mapaNuevo’ undeclared (first use in this function)
   50 |     return mapaNuevo;
      |            ^~~~~~~~~
hashmap.c:50:12: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:48:16: error: unused variable ‘nuevoMapa’ [-Werror=unused-variable]
   48 |     HashMap ** nuevoMapa = malloc(sizeof(HashMap));
      |                ^~~~~~~~~
hashmap.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
6e07cad
Thu Apr 16 08:19:59 PM UTC 2026: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:5: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   63 |     pos = hash(key, map->capacity);
      |     ^~~
      |     pow
hashmap.c:63:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:65:21: error: invalid initializer
   65 |     Pair nuevoPar = createPair(key, value);
      |                     ^~~~~~~~~~
5b60c54
